# passive-sound-localization

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
passive_sound_localization/: audio_mixer.py  generate.py  localization.py  logger.py  main.py  main2.py  package.xml  read_mic.py  setup.cfg  tdoa.py  transcriber.py  vad.py  visualizer.py
passive_sound_localization/config/: audio_mixer_config.py  config.py  feature_flags_config.py  localization_config.py  localization_params.yaml  logging_config.py  transcriber_config.py  visualizer_config.py
passive_sound_localization/passive_sound_localization/: localization.py  main.py  realtime_audio.py  realtime_audio_streamer.py  realtime_openai_websocket.py  vad.py
passive_sound_localization/passive_sound_localization/models/configs/: __init__.py  audio_mixer.py  localization.py  openai_websocket.py  vad.py  visualizer.py
passive_sound_localization/test/: test_realtime_audio_streamer.py
scripts/: run.py  run.sh
